tests/errors/semantic/blocking/UPDATE_SET_INCOMPATIBLE_TYPES_2.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {2, 9, 5}
b = {8.9, 6.}
a.update(b)
